* Removed a line of testing code that got committed accidentally.
* Added a caveat to the schedulers.txt file.
* Added a utility for recursivly representing an an object.
* Removed the code the re-built the running config for display in the browser.
* Running config is now displayed via the recursive object repr utility.
* Updated TODO.
* Added toXML() method to the host config object.

2008.06.29 oubiwann

* Updated comments in application.service.
* Updated the TODO with another exploratory feature (live addition of proxied
hosts).
* Updated the TODO with another note.
* Updated the docstrings in admin.pages.
* Updated TODO.
* Added a utility for checking crupt passwords.
* Updated the cred checker to use this utility.
* Updated the admin config password checker to use this utility.
* Added tests for crypt util functions.
* Stubbed out a class for a weighted scheduler.

2008.06.28 oubiwann

* Removed the less useful least connections scheduler, keeping the optimized
one.
* Removed old proxy manager methods.
* Updated docstring.
* Removed completed items from TODO.
* With Glyph's suggestions implemented, his notes have been removed from TODO.
* Removed unused imports.
* Renamed txlb.application.services to txlb.application.director.
* Updated the docstring in application.director.
* Updated the README with more usage information and stubs for recent
performance data.
* Updated the TODO.
* Removed an unused class for application.service.
* Updated the API example .tac with information about running with
load-balancing enabled.
* Merged experimental Twisted service API branch to trunk.
* Reenabled the trunk location in the admin script.
* Added a manhole configuration option and updated the config docs.
* Added a boolean utility function.
* Updated the admin config class and the main config class to process the
enable admin child node.
* Added unit tests for the utility module.
* Improved the admin logic for handling HTTPS configuration.